--- a/src/elements/_articlelists.scss
+++ b/src/elements/_articlelists.scss
@@ -1,7 +1,14 @@
 .main-article {
   margin-bottom: 15px;
   .intro-image {
-    margin-bottom: 7px; }
+    margin-bottom: 7px; 
+		img
+		{
+			padding: 5px;
+			border: 1px $light-gray solid;;
+			
+		}
+}
   p {
     margin-bottom: 10px; }
   h1 {
