--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -229,7 +229,8 @@ a {
   border-top: 1px solid $light-gray;
   height: 1px;
   line-height: 1px;
-  font-size: 1px;
+  font-size: 1px;     
+	overflow: hidden;
   margin-bottom: 12px; }
 
 .one-line {
