clearfix for lines

--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -230,7 +230,7 @@ a {
   height: 1px;
   line-height: 1px;
   font-size: 1px;     
-	overflow: hidden;
+	clear: both;
   margin-bottom: 12px; }
 
 .one-line {
