--- a/stylesheets/blue.css
+++ b/stylesheets/blue.css
@@ -379,7 +379,7 @@ a.big-arrow {
   height: 1px;
   line-height: 1px;
   font-size: 1px;
-  overflow: hidden;
+  clear: both;
   margin-bottom: 12px;
 }
 
