--- a/src/partials/_menu.scss
+++ b/src/partials/_menu.scss
@@ -88,7 +88,7 @@
 	  height: 26px;
 	}
 	.submenu-bottom{
-		background: url(../images/vertical_shaddow.jpg) no-repeat;
+		//background: url(../images/vertical_shaddow.jpg) no-repeat;
 		height:23px;
 		margin-left:auto;
 		margin-right:auto;
