--- a/src/elements/_articlelists.scss
+++ b/src/elements/_articlelists.scss
@@ -44,10 +44,9 @@
     margin-bottom: 6px;
     display: block; } }    
 
-.listrows .article-intro h2 a
+.article-intro.listrows h2 a
 {
 	color: $purple;
-	
 }
 
 
