box h3 overflow hidden

--- a/src/elements/_box.scss
+++ b/src/elements/_box.scss
@@ -53,7 +53,8 @@
       font-size: 16px;
       font-weight: normal;
       margin-bottom: 5px;
-      text-decoration: none; 
+      text-decoration: none;    
+			overflow: hidden;
 		   a {
 		     font-size: 16px; 
 		     font-weight: normal;
