Default link color on a

--- a/stylesheets/red.css
+++ b/stylesheets/red.css
@@ -109,7 +109,7 @@ strong {
 
 /* line 40, ../src/partials/_main.scss */
 a {
-  color: #547a8c;
+  color: #c63b00;
 }
 
 /* line 43, ../src/partials/_main.scss */
