--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -38,7 +38,7 @@ strong {
   font-weight: bold; }
 
 a {
-  color: $default_linkcolor; }
+  color: $themecolor; }
 
 h1, h2, h3, h4, h5 {
   font-family: $mainfont;
