--- a/stylesheets/gul.css
+++ b/stylesheets/gul.css
@@ -109,7 +109,7 @@ strong {
 
 /* line 40, ../src/partials/_main.scss */
 a {
-  color: #547a8c;
+  color: #cb9500;
 }
 
 /* line 43, ../src/partials/_main.scss */
