--- a/src/elements/_articlelists.scss
+++ b/src/elements/_articlelists.scss
@@ -32,12 +32,13 @@
 		{
 			color: $black;  
 			@include hover-link;  
+      &.arrow {color: $themecolor;}
 		}
 		}
   p {
     margin-bottom: 3px;
     a {
-      color: $themecolor;
+      color: black;
       text-decoration: none;
       &:hover {
         text-decoration: underline; } } }
