Added !important to .arrow a

--- a/src/elements/_articlelists.scss
+++ b/src/elements/_articlelists.scss
@@ -32,7 +32,7 @@
 		{
 			color: $black;  
 			@include hover-link;  
-      &.arrow {color: $themecolor;}
+      &.arrow {color: $themecolor!important;}
 		}
 		}
   p {
