--- a/stylesheets/gul.css
+++ b/stylesheets/gul.css
@@ -2473,7 +2473,7 @@ a.pdf {
 }
 /* line 35, ../src/elements/_articlelists.scss */
 .article-intro h2 a.arrow {
-  color: #cb9500;
+  color: #cb9500 !important;
 }
 /* line 38, ../src/elements/_articlelists.scss */
 .article-intro p {
