--- a/stylesheets/red.css
+++ b/stylesheets/red.css
@@ -2473,7 +2473,7 @@ a.pdf {
 }
 /* line 35, ../src/elements/_articlelists.scss */
 .article-intro h2 a.arrow {
-  color: #c63b00;
+  color: #c63b00 !important;
 }
 /* line 38, ../src/elements/_articlelists.scss */
 .article-intro p {
