--- a/src/partials/_menu.scss
+++ b/src/partials/_menu.scss
@@ -6,8 +6,7 @@
 		display:block;
 		padding-left: 15px; 
 		padding-right: 15px;
-		padding-top: 6px;     
-		padding-bottom: 11px;   
+		line-height: 25px;
 		@include hover-link;
 		color: ($menu-linkcolor);
 		text-transform:uppercase;
@@ -22,6 +21,20 @@
 		padding-right:1px;   
 		  
 		background: image-url($menuli-bgimg) no-repeat 100% 0;   
+		
+		div {
+			float: left;
+			margin-left: 15px;
+			margin-right: 15px;
+			img {
+				height: 16px;
+				position: relative;
+				top: 4px;
+				padding-right: 8px;
+				float: left;
+			}	
+
+		}
 	}
 	li.active {
 		padding-left: image-width($activemenuli-bgimg);
@@ -33,7 +46,8 @@
 			background: image-url($activemenu-bgimg) no-repeat 100% 0; 
 			text-decoration: underline;
 			padding-left: 10px;
-			padding-top: 9px;  
+			padding-top: 5px;  
+			padding-bottom: 2px;
 			color: ($themecolor);  
 			font-size: 12px;    
 		}   
