--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -122,7 +122,7 @@ a.hoverlink {
 
 /*
 .all-cols .container {
-  background: url(../images/main_background.png) repeat-y; }
+  background: url(../images/main_background_2.png) repeat-y; }
 */
 
 
