--- a/stylesheets/red.css
+++ b/stylesheets/red.css
@@ -232,7 +232,7 @@ a.hoverlink:hover {
 
 /*
 .all-cols .container {
-  background: url(../images/main_background.png) repeat-y; }
+  background: url(../images/main_background_2.png) repeat-y; }
 */
 /* line 134, ../src/partials/_main.scss */
 #content .grid-padder {
