new content background

--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -133,7 +133,9 @@ a.hoverlink {
 
 #content .grid-padder {
   padding-top: 0;
-  padding-right: 0; }
+  padding-right: 0; 
+  background: url(../images/themes/content_background.png) repeat-y;
+  }
 
 .mr {
   margin: 0px 13px 0px 0px; }
