Iconheader height adjustments

--- a/src/partials/_main.scss
+++ b/src/partials/_main.scss
@@ -482,7 +482,8 @@ a {
       width: 188px; } }
   h2.icon-header {
     .icon-holder {
-      padding-left: 30px; }
+      padding-left: 30px;
+      height: 27px; }
     .video {
       background: url(../images/header-icon-video.gif) no-repeat 0px 5px; }
     .bilder {
