--- a/stylesheets/red.css
+++ b/stylesheets/red.css
@@ -3,7 +3,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 17, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,45 +25,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 20, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 20, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
 }
 
-/* line 22, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 24, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 26, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 28, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 101, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 101, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 30, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 114, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 114, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -1631,7 +1631,7 @@ a.pdf {
   clear: both;
   width: 100%;
 }
-/* line 11, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_bullets.scss */
+/* line 11, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_bullets.scss */
 #content .footer li li {
   list-style-image: none;
   list-style-type: none;
@@ -1657,7 +1657,7 @@ a.pdf {
   font-weight: bold;
   text-decoration: none;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 #content .footer .col-1 h3 a:hover {
   text-decoration: underline;
 }
@@ -1668,19 +1668,19 @@ a.pdf {
   text-decoration: none;
   color: #0a0a0a;
 }
-/* line 18, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 18, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 #content .footer .col-1 a:visited {
   color: #0a0a0a;
 }
-/* line 21, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 21, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 #content .footer .col-1 a:focus {
   color: #d63f3a;
 }
-/* line 24, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 24, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 #content .footer .col-1 a:hover {
   color: #c63b00;
 }
-/* line 27, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 27, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 #content .footer .col-1 a:active {
   color: #2f7aaf;
 }
@@ -1900,7 +1900,7 @@ a.pdf {
   *zoom: 1;
   overflow: visible;
 }
-/* line 60, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 60, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #main-menu li {
   list-style-image: none;
   list-style-type: none;
@@ -1911,15 +1911,15 @@ a.pdf {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 48, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 48, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #main-menu li:first-child, #main-menu li.first {
   padding-left: 0;
 }
-/* line 49, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 49, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #main-menu li:last-child {
   padding-right: 0;
 }
-/* line 50, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 50, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #main-menu li.last {
   padding-right: 0;
 }
@@ -1936,7 +1936,7 @@ a.pdf {
   font-weight: bold;
   font-size: 11px;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 #main-menu a:hover {
   text-decoration: underline;
 }
@@ -1995,7 +1995,7 @@ a.pdf {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 60, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 60, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #sub-menu li {
   list-style-image: none;
   list-style-type: none;
@@ -2006,15 +2006,15 @@ a.pdf {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 48, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 48, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #sub-menu li:first-child, #sub-menu li.first {
   padding-left: 0;
 }
-/* line 49, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 49, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #sub-menu li:last-child {
   padding-right: 0;
 }
-/* line 50, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 50, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #sub-menu li.last {
   padding-right: 0;
 }
@@ -2043,7 +2043,7 @@ a.pdf {
   font-family: arial, helvetica;
   font-weight: bold;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 #sub-menu a:hover {
   text-decoration: underline;
 }
@@ -2082,7 +2082,7 @@ a.pdf {
   top: 1px;
   overflow: hidden;
 }
-/* line 60, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 60, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #top-right-menu li {
   list-style-image: none;
   list-style-type: none;
@@ -2093,15 +2093,15 @@ a.pdf {
   padding-left: 10px;
   padding-right: 10px;
 }
-/* line 48, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 48, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #top-right-menu li:first-child, #top-right-menu li.first {
   padding-left: 0;
 }
-/* line 49, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 49, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #top-right-menu li:last-child {
   padding-right: 0;
 }
-/* line 50, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
+/* line 50, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/lists/_horizontal-list.scss */
 #top-right-menu li.last {
   padding-right: 0;
 }
@@ -2280,7 +2280,7 @@ a.pdf {
   text-decoration: none;
   color: #c63b00;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 .box h3 a:hover {
   text-decoration: underline;
 }
@@ -2370,23 +2370,23 @@ a.pdf {
   text-decoration: none;
   color: #0a0a0a;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 .kalender h3 a:hover {
   text-decoration: underline;
 }
-/* line 18, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 18, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .kalender h3 a:visited {
   color: #0a0a0a;
 }
-/* line 21, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 21, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .kalender h3 a:focus {
   color: #d63f3a;
 }
-/* line 24, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 24, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .kalender h3 a:hover {
   color: #c63b00;
 }
-/* line 27, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 27, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .kalender h3 a:active {
   color: #2f7aaf;
 }
@@ -2500,7 +2500,7 @@ a.pdf {
   color: #0a0a0a;
   text-decoration: none;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 .article-intro h2 a:hover {
   text-decoration: underline;
 }
@@ -2591,19 +2591,19 @@ h1.article-header {
 .byline .person a {
   color: #0a0a0a;
 }
-/* line 18, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 18, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .byline .person a:visited {
   color: #0a0a0a;
 }
-/* line 21, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 21, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .byline .person a:focus {
   color: #d63f3a;
 }
-/* line 24, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 24, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .byline .person a:hover {
   color: #c63b00;
 }
-/* line 27, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
+/* line 27, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_link-colors.scss */
 .byline .person a:active {
   color: #2f7aaf;
 }
@@ -2640,54 +2640,52 @@ h1.article-header {
 .article .addthis_toolbox {
   overflow: hidden;
   clear: both;
-  float: right;
-  width: 300px;
 }
 
-/* line 83, ../src/elements/_article.scss */
+/* line 81, ../src/elements/_article.scss */
 .banner {
   margin-top: 20px;
 }
 
-/* line 86, ../src/elements/_article.scss */
+/* line 84, ../src/elements/_article.scss */
 .paragraph {
   margin-top: 20px;
 }
-/* line 88, ../src/elements/_article.scss */
+/* line 86, ../src/elements/_article.scss */
 .paragraph h2 {
   font-weight: bold;
 }
-/* line 91, ../src/elements/_article.scss */
+/* line 89, ../src/elements/_article.scss */
 .paragraph p {
   margin-bottom: 12px;
 }
-/* line 94, ../src/elements/_article.scss */
+/* line 92, ../src/elements/_article.scss */
 .paragraph .picture {
   width: 259px;
 }
-/* line 96, ../src/elements/_article.scss */
+/* line 94, ../src/elements/_article.scss */
 .paragraph .picture.fr {
   margin-left: 10px;
 }
-/* line 99, ../src/elements/_article.scss */
+/* line 97, ../src/elements/_article.scss */
 .paragraph .picture.fl {
   margin-right: 10px;
 }
-/* line 101, ../src/elements/_article.scss */
+/* line 99, ../src/elements/_article.scss */
 .paragraph .picture caption {
   float: right;
   overflow: hidden;
   font-size: 12px;
   line-height: 12px;
 }
-/* line 107, ../src/elements/_article.scss */
+/* line 105, ../src/elements/_article.scss */
 .paragraph .picture img {
   border: 5px solid white;
   padding: 5px;
   border: 1px solid #acb2b6;
   background-color: white;
 }
-/* line 113, ../src/elements/_article.scss */
+/* line 111, ../src/elements/_article.scss */
 .paragraph .picture .caption {
   display: block;
   clear: both;
@@ -2698,7 +2696,7 @@ h1.article-header {
   border-bottom: 1px solid #acb2b6;
 }
 
-/* line 125, ../src/elements/_article.scss */
+/* line 123, ../src/elements/_article.scss */
 .linklist {
   width: 50%;
   float: left;
@@ -2706,11 +2704,11 @@ h1.article-header {
   width: 224px;
   margin-bottom: 12px;
 }
-/* line 131, ../src/elements/_article.scss */
+/* line 129, ../src/elements/_article.scss */
 .linklist h3 {
   margin-bottom: 7px;
 }
-/* line 134, ../src/elements/_article.scss */
+/* line 132, ../src/elements/_article.scss */
 .linklist a {
   font-size: 12px;
   padding-bottom: 7px;
@@ -2718,48 +2716,48 @@ h1.article-header {
   text-decoration: none;
   line-height: 14px;
 }
-/* line 4, /Users/thomas/.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
+/* line 4, ../../../../.gem/ruby/1.8/gems/compass-0.11.5/frameworks/compass/stylesheets/compass/typography/links/_hover-link.scss */
 .linklist a:hover {
   text-decoration: underline;
 }
-/* line 141, ../src/elements/_article.scss */
+/* line 139, ../src/elements/_article.scss */
 .linklist.last {
   padding-right: 0px;
   width: 234px;
 }
 
-/* line 146, ../src/elements/_article.scss */
+/* line 144, ../src/elements/_article.scss */
 .facts {
   width: 170px;
   font-size: 11px;
 }
-/* line 149, ../src/elements/_article.scss */
+/* line 147, ../src/elements/_article.scss */
 .facts.fr {
   margin-left: 10px;
   padding-left: 10px;
   border-left: 1px solid #acb2b6;
 }
-/* line 154, ../src/elements/_article.scss */
+/* line 152, ../src/elements/_article.scss */
 .facts.fl {
   margin-right: 10px;
   padding-right: 10px;
   border-right: 1px solid #acb2b6;
 }
-/* line 159, ../src/elements/_article.scss */
+/* line 157, ../src/elements/_article.scss */
 .facts h3 {
   color: #353535;
   font-weight: bold;
 }
-/* line 163, ../src/elements/_article.scss */
+/* line 161, ../src/elements/_article.scss */
 .facts .content {
   color: #353535;
   line-height: 16px;
 }
-/* line 166, ../src/elements/_article.scss */
+/* line 164, ../src/elements/_article.scss */
 .facts .content li {
   padding-left: 5px;
 }
-/* line 170, ../src/elements/_article.scss */
+/* line 168, ../src/elements/_article.scss */
 .facts .caption {
   display: block;
   clear: both;
